Upgrade swagger-ui to version 3.20.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Buffalo .gitignore
 example/vendor/
 example/**/*.log
 example/**/*.sqlite
@@ -12,3 +13,6 @@ example/.vscode/
 example/.grifter/
 example/.env
 example/docs/swagger
+
+# Swagger dist directory
+dist
